# topo-functions

./: .gitignore  README.md  pyproject.toml  topo2geojson.py  topo_geojson.py  topo_rdf_geojson.py
.claude/: settings.local.json
.github/workflows/: test.yml
tests/: conftest.py  cube-with-void.json  parcel1.json  test_topo2geojson.py  test_topo_rdf_geojson.py  topoobjects.ttl
tests/output/topo2geojson/: cube-with-void-faces.geojson  cube-with-void-points-edges.geojson  cube-with-void-shells.geojson  cube-with-void-solids.geojson  parcel1-edges.geojson  parcel1-points.geojson  parcel1-resolved.geojson  parcel1-run-transform.geojson  reprojected-point.geojson
tests/output/topo_rdf_geojson/: parcel-8446454.geojson
topo_geojson.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
topo_rdf_geojson.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
