[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topo-rdf-geojson"
version = "0.2.0"
description = "Convert RDF Turtle topology models (geojson-topo vocabulary) to GeoJSON geometry objects, and convert topo-feature JSON to GeoJSON"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "rdflib>=6.0",
]

[project.optional-dependencies]
geojson = [
    "pyproj>=3.5",
]
test = [
    "pyproj>=3.5",
    "pytest>=7.0",
]

[project.scripts]
topo-rdf-geojson = "topo_rdf_geojson:_cli"
topo2geojson = "topo2geojson:_cli"

[tool.setuptools]
py-modules = ["topo_rdf_geojson", "topo2geojson"]

[tool.pytest.ini_options]
testpaths = ["tests"]
